Changed where are the pictures

--- a/dodaj_recept.html
+++ b/dodaj_recept.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Le Chef - Dodaj novi recept</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontovi.css">
-    <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="css/fontovi.css">
+    <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/stil.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="mapa.js"></script>
+    <script src="script/mapa.js"></script>
 </head>
 <style>
     td
@@ -29,7 +29,7 @@
 </style>
 <body class="color_ternary">
     <nav class="navbar navbar-expand-lg color_primary color_text2">
-      <a href="index.html"><img src="logo.png" style="width: 70px;"></a>
+      <a href="index.html"><img src="slike/logo.png" style="width: 70px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon color_text2" style="text-align: center; font-size: 30px;">Meni
           </span>
@@ -64,8 +64,8 @@
           </ul>
         </ul>
         <div style="text-align: right;">
-          <img src="serbian_flag.png" class="flag" id="srp" style="height: 50px;">
-          <img src="uk_flag.png" class="flag" id="eng" style="height: 50px;">
+          <img src="slike/serbian_flag.png" class="flag" id="srp" style="height: 50px;">
+          <img src="slike/uk_flag.png" class="flag" id="eng" style="height: 50px;">
         </div>
         </div>
     </nav>
