--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Le Chef - Pocetna</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontovi.css">
-    <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="css/fontovi.css">
+    <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/stil.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="mapa.js"></script>
+    <script src="script/mapa.js"></script>
 </head>
 <style>
   .carousel-item img
@@ -29,7 +29,7 @@
 </style>
 <body class="color_ternary">
     <nav class="navbar navbar-expand-lg color_primary color_text2">
-      <a href="index.html"><img src="logo.png" style="width: 70px;"></a>
+      <a href="index.html"><img src="slike/logo.png" style="width: 70px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon color_text2" style="text-align: center; font-size: 30px;">Meni
           </span>
@@ -64,8 +64,8 @@
           </ul>
         </ul>
         <div style="text-align: right;">
-          <img src="serbian_flag.png" class="flag" id="srp" style="height: 50px;">
-          <img src="uk_flag.png" class="flag" id="eng" style="height: 50px;">
+          <img src="slike/serbian_flag.png" class="flag" id="srp" style="height: 50px;">
+          <img src="slike/uk_flag.png" class="flag" id="eng" style="height: 50px;">
         </div>
         </div>
     </nav>
@@ -92,13 +92,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner" style="height: 300px;">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="slika1.jpg" style="height: 100%;" alt="First slide">
+                <img class="d-block w-100" src="slike/slika1.jpg" style="height: 100%;" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="slika2.jpg" style="height: 100%;" alt="Second slide">
+                <img class="d-block w-100" src="slike/slika2.jpg" style="height: 100%;" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="slika3.jpg" style="height: 100%;" alt="Third slide">
+                <img class="d-block w-100" src="slike/slika3.jpg" style="height: 100%;" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -130,13 +130,13 @@
       <hr style="border: 2px solid black;">
       <div class="row">
         <div class="col-4">
-            <a href="https://www.gordonramsay.com/"><img src="GordonRamsey.jpg"></a>
+            <a href="https://www.gordonramsay.com/"><img src="slike/GordonRamsey.jpg"></a>
         </div>
         <div class="col-4">
-          <a href="https://www.jamieoliver.com/"><img src="Jamie.webp"></a>
+          <a href="https://www.jamieoliver.com/"><img src="slike/Jamie.webp"></a>
         </div>
         <div class="col-4">
-          <a href="https://en.wikipedia.org/wiki/Anthony_Bourdain"><img src="Anthony.jpg"></a>
+          <a href="https://en.wikipedia.org/wiki/Anthony_Bourdain"><img src="slike/Anthony.jpg"></a>
         </div>
       </div>
       <hr style="border: 2px solid black;">
