--- a/view_all.html
+++ b/view_all.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Le Chef - Pregled</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontovi.css">
-    <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="css/fontovi.css">
+    <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/stil.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="mapa.js"></script>
+    <script src="script/mapa.js"></script>
 </head>
 <style>
     td
@@ -40,7 +40,7 @@
 </style>
 <body class="color_ternary">
     <nav class="navbar navbar-expand-lg color_primary color_text2">
-      <a href="index.html"><img src="logo.png" style="width: 70px;"></a>
+      <a href="index.html"><img src="slike/logo.png" style="width: 70px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon color_text2" style="text-align: center; font-size: 30px;">Meni
           </span>
@@ -75,8 +75,8 @@
           </ul>
         </ul>
         <div style="text-align: right;">
-          <img src="serbian_flag.png" class="flag" id="srp" style="height: 50px;">
-          <img src="uk_flag.png" class="flag" id="eng" style="height: 50px;">
+          <img src="slike/serbian_flag.png" class="flag" id="srp" style="height: 50px;">
+          <img src="slike/uk_flag.png" class="flag" id="eng" style="height: 50px;">
         </div>
         </div>
     </nav>
@@ -101,14 +101,15 @@
             </div>
         </div>
         <div class="row" style="margin-bottom: 30px;">
-          <div class="col-6">
+          <div class="col-8">
             <span class="text" id="sortiraj" style="font-size: 30px;"></span><span style="font-size: 30px;">: </span>
             <input type="radio" name="sort" value="naslov"> <span class="text" id="naslov" style="font-size: 20px;"></span> &nbsp; &nbsp;
             <input type="radio" name="sort" value="ocena"> <span class="text" id="ocena" style="font-size: 20px;"></span> &nbsp; &nbsp;
+            <input type="radio" name="sort" value="tezina"> <span class="text" id="tezinica" style="font-size: 20px;"></span> &nbsp; &nbsp;
             <button class="btn color_primary text" id="sortiraj"></button>
           </div>
-          <div class="col-6" style="text-align: right;">
-            <input type="image" src="glass.png" id="pretrazi" width="5%">
+          <div class="col-4" style="text-align: right;">
+            <input type="image" src="slike/glass.png" id="pretrazi" width="5%">
             <input type="text" name="pretraga" id="p"> 
           </div>
         </div>
@@ -230,6 +231,14 @@
           {
             recepti.sort(function(a,b){
               return getAvg(b)-getAvg(a);
+            });
+            localStorage.setItem('niz_recepata',JSON.stringify(recepti));
+            location.reload();
+          }
+          if (po_cemu=='tezina')
+          {
+            recepti.sort(function(a,b){
+              return parseInt(a.tezina)-parseInt(b.tezina);
             });
             localStorage.setItem('niz_recepata',JSON.stringify(recepti));
             location.reload();
