--- a/view_one.html
+++ b/view_one.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Le Chef - Recept</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontovi.css">
-    <link rel="stylesheet" href="colors.css">
-    <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="css/fontovi.css">
+    <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/stil.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
-    <script src="mapa.js"></script>
+    <script src="script/mapa.js"></script>
 </head>
 <style>
   .carousel-item img
@@ -24,7 +24,7 @@
 </style>
 <body class="color_ternary">
     <nav class="navbar navbar-expand-lg color_primary color_text2">
-      <a href="index.html"><img src="logo.png" style="width: 70px;"></a>
+      <a href="index.html"><img src="slike/logo.png" style="width: 70px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon color_text2" style="text-align: center; font-size: 30px;">Meni
           </span>
@@ -59,8 +59,8 @@
           </ul>
         </ul>
         <div style="text-align: right;">
-          <img src="serbian_flag.png" class="flag" id="srp" style="height: 50px;">
-          <img src="uk_flag.png" class="flag" id="eng" style="height: 50px;">
+          <img src="slike/serbian_flag.png" class="flag" id="srp" style="height: 50px;">
+          <img src="slike/uk_flag.png" class="flag" id="eng" style="height: 50px;">
         </div>
         </div>
     </nav>
@@ -193,7 +193,7 @@
     });
     if(localStorage.getItem("korisnik")!=null)
     {
-      $("#novi_komentar").append($('<div class="col-10"><textarea id="text_komentara" style="width: 100%;"></textarea><button class="btn color_primary text" id="posalji" onclick="addComment()"></button></div><div class="col-2"><input type="radio" name="zvezda" value="1"> 1 <img src="./1_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="2"> 2 <img src="./2_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="3"> 3 <img src="./3_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="4"> 4 <img src="./4_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="5" checked> 5 <img src="./5_z.png" style="height: 20px; filter: brightness(0.7)"><br></div>'));
+      $("#novi_komentar").append($('<div class="col-10"><textarea id="text_komentara" style="width: 100%;"></textarea><button class="btn color_primary text" id="posalji" onclick="addComment()"></button></div><div class="col-2"><input type="radio" name="zvezda" value="1"> 1 <img src="slike/1_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="2"> 2 <img src="slike/2_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="3"> 3 <img src="slike/3_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="4"> 4 <img src="slike/4_z.png" style="height: 20px; filter: brightness(0.7)"><br><input type="radio" name="zvezda" value="5" checked> 5 <img src="slike/5_z.png" style="height: 20px; filter: brightness(0.7)"><br></div>'));
     }
     else
     {
@@ -218,6 +218,8 @@
       $("#slike_recept").append($(image_string1+image_string2+recept.slike[i]+image_string3+image_string4));
       image_string1 = '<div class="carousel-item">';
     }
+    $("#slike_recept").append($(image_string1+image_string2+'slike/logo.png'+image_string3+image_string4));
+    image_string1 = '<div class="carousel-item">';
     let avg = 0;
     for(let i = 0; i<recept.komentari.length; ++i)
     {
